adding funcionality to update movie

--- a/views/admin/movies.ejs
+++ b/views/admin/movies.ejs
@@ -56,7 +56,7 @@
                                     <td class="thirdTd"><%= movie.gendername %></td>
                                     <td class="fourthTd">
                                         <div class="actionButtons">
-                                            <a href="">
+                                            <a href="/admin/updatemovie/<%= movie.movieid %>">
                                                 <img src="/images/edit.png" alt="Editar" class="editButton">
                                             </a>
                                             
