adding regex to phone inputs

--- a/views/passwordlogon.ejs
+++ b/views/passwordlogon.ejs
@@ -45,8 +45,8 @@
                             </div>
             
                             <div class="newPhoneInput">
-                                <input type="text" required id="newPhone" name="newPhone" autocomplete="off">
-                                <label class="labelline" for="newPhone">Insira seu número de telefone</label>
+                                <input type="text" required id="phone" name="phone" autocomplete="off">
+                                <label class="labelline" for="phone">Insira seu número de telefone</label>
                             </div>
             
                             <div class="newPasswordInput">
@@ -60,5 +60,7 @@
                 </form>
             </div>
         </div>
+
+        <script src="/scripts/phoneregex.js"></script>
     </body>
 </html>
