--- a/views/admin/newuser.ejs
+++ b/views/admin/newuser.ejs
@@ -73,5 +73,7 @@
                 updateSelectValidationStyle();
             });
         </script>
+
+        <script src="/scripts/phoneregex.js"></script>
     </body>
 </html>
