--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -42,6 +42,7 @@ body {
 .app {
     display: flex;
     flex-direction: column;
+    max-width: 100%;
 }
 
 .header {
@@ -83,7 +84,133 @@ body {
     font-size: 1.6rem;
 }
 
+.mainMovie {
+    position: relative;
+}
+
+.mainMovie > .position {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    color: var(--white);
+    top: 0;
+    left: 0;
+    padding: 10rem 8rem;
+    width: 100%;
+}
+
+.top {
+    font-size: 4rem;
+    font-weight: bold;
+}
+
+.film {
+    font-size: 9rem;
+    max-width: 80rem;
+}
+
+.infoButton {
+    background-color: var(--gray-button-darker);
+    max-width: fit-content;
+    border: none;
+    border-radius: 5px;
+    opacity: 0.6;
+    transition: opacity linear .2s;
+    display: flex;
+    padding: 1.2rem;
+    align-items: center;
+    gap: 1rem;
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+
+.infoButton:hover {
+    opacity: 0.9;
+    cursor: pointer;
+}
+
+.infoButton > img {
+    width: 3rem;
+    height: 3rem;
+}
+
 .mainImage {
     width: 100%;
     opacity: 0.5;
+    object-fit: cover;
+}
+
+.allMovies {
+    flex-direction: column;
+    gap: 2rem;
+    max-width: 100%;
+}
+
+.section {
+    display: flex;
+    flex-direction: column;
+    color: var(--white);
+    margin: 0 auto;
+    padding: 0 5rem;
+}
+
+.section > h2 {
+    color: var(--white);
+    font-size: 2.6rem;
+    font-weight: bold;
+    margin: 2rem 0;
+}
+
+.moviesRow {
+    display: flex;
+    gap: 2rem;
+    overflow-x: auto;
+    scroll-behavior: smooth;
+    padding-bottom: 1rem;
+    margin-bottom: 2rem;
+}
+
+.movieCard {
+    position: relative;
+    transition: opacity linear .2s;
+}
+
+.movieCard:hover {
+    opacity: 0.7;
+}
+
+.movieCard h4 {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+
+    color: var(--white);
+    padding: 2rem 1.5rem;
+    font-size: 1.8rem;
+    background: linear-gradient(to top, rgba(0,0,0,0.9), transparent);
+}
+
+.movieCard > a > img {
+    width: 40rem;
+    border-radius: 10px;
+}
+
+.allMovies {
+    scrollbar-width: thin;
+    scrollbar-color: var(--gray-lighter) var(--black);
+}
+
+.allMovies::-webkit-scrollbar {
+    height: 8px;
+}
+
+.allMovies::-webkit-scrollbar-track {
+    background: var(--black);
+}
+
+.allMovies::-webkit-scrollbar-thumb {
+    background-color: var(--gray-lighter);
+    border-radius: 10px;
 }
